public enum ActionType {
    Pass,
    Play
}
