public enum PlayerColor {
    Black,
    White
}
